@@ -1,4 +1,4 @@
-$Id: History,v 1.41 2002-10-16 15:03:09 gcosmo Exp $
+$Id: History,v 1.42 2002-10-23 16:26:49 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,14 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+October 23, 2002  G. Cosmo                 geommng-V04-01-02
+- G4PVReplica.cc:
+  o Corrected order for check on illegal constructions, in constructor taking
+    a pointer to logical volume as mother volume.
+  o Improved output diagnostics.
+- G4PVParameterised.cc:
+  o Improved output diagnostics for check on illegal constructions.
 
 October 16, 2002  G. Cosmo                 geommng-V04-01-01
 - G4PVReplica.cc, G4PVParameterised.cc:
